--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.15",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "react": "19.1.0",
